--- a/user/html/favorites.html
+++ b/user/html/favorites.html
@@ -1917,7 +1917,7 @@
               eyes: "fa-eye",
               face: "fa-smile",
               cheeks: "fa-grin-hearts",
-              nails: "fa-hand-sparkles",
+              nails: "fa-star",
               tools: "fa-tools",
               skincare: "fa-spa",
               brushes: "fa-paint-brush",
