--- a/user/html/cart.html
+++ b/user/html/cart.html
@@ -26,6 +26,13 @@
         margin: 0 auto;
         padding-top: 0px;
       }
+      :root {
+        --primary-pink: #ec4899;
+        --dark-pink: #db2777;
+        --light-pink: #fbcfe8;
+        --card-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+          0 2px 4px -1px rgba(0, 0, 0, 0.06);
+      }
 
       /* Search & Filter Container */
       .search-container {
@@ -391,7 +398,7 @@
       /* Results Counter */
       .results-counter {
         text-align: left;
-        padding: 0px 20px;
+        padding: 10px 20px;
         max-width: 1200px;
         margin: 0 auto;
         font-family: "Montserrat", sans-serif;
@@ -410,7 +417,6 @@
 
       .page-content.active {
         display: block;
-        margin-top: 0;
       }
 
       /* Cart Page Styles */
@@ -1167,7 +1173,6 @@
 
         .cart-summary {
           padding: 15px;
-          bottom: 60px;
         }
 
         .search-container {
@@ -1840,16 +1845,10 @@
       function renderCart() {
         const cartItems = document.getElementById("cart-items");
         const displayCart = filteredCart.length > 0 ? filteredCart : cart;
-        const resultsCounter = document.getElementById("results-counter");
 
         cartItems.innerHTML = "";
 
         if (!displayCart || displayCart.length === 0) {
-          // Hide results counter when no items
-          if (resultsCounter) {
-            resultsCounter.style.display = "none";
-          }
-
           if (currentSearchTerm || selectedCategories.length > 0) {
             cartItems.innerHTML = `
                 <div class="empty-search">
@@ -1877,14 +1876,49 @@
           return;
         }
 
-        // Show results counter when there are items
-        if (resultsCounter) {
-          resultsCounter.style.display = "block";
-        }
-
         const sorted = [...displayCart].reverse();
         sorted.forEach((item) => {
-          // ... rest of the cart rendering code remains the same
+          const itemTotal = item.price * item.quantity;
+          const cartItem = document.createElement("div");
+          cartItem.className = "cart-item";
+
+          cartItem.innerHTML = `
+            <input type="checkbox" class="cart-item-checkbox" ${
+              item.selected ? "checked" : ""
+            } onchange="toggleItemSelection('${escapeHtml(item.id)}')">
+            <div class="cart-item-image"><img src="${escapeHtml(
+              item.image
+            )}" alt="${escapeHtml(
+            item.name
+          )}" style="width:100%;height:100%;object-fit:cover;border-radius:10px;"></div>
+            <div class="cart-item-details">
+                <div class="cart-item-name">${escapeHtml(item.name)}</div>
+                <div class="cart-item-variation">${escapeHtml(
+                  item.variation || ""
+                )}</div>
+                <div class="cart-item-price-container">
+                    <div class="cart-item-unit-price">${formatPrice(
+                      item.price
+                    )} × ${item.quantity}</div>
+                    <div class="cart-item-total-price">${formatPrice(
+                      itemTotal
+                    )}</div>
+                </div>
+                <div class="cart-item-controls">
+                    <button class="quantity-btn" onclick="changeQuantity('${escapeHtml(
+                      item.id
+                    )}', ${item.quantity - 1})">-</button>
+                    <span class="quantity">${item.quantity}</span>
+                    <button class="quantity-btn" onclick="changeQuantity('${escapeHtml(
+                      item.id
+                    )}', ${item.quantity + 1})">+</button>
+                    <button class="remove-btn" onclick="removeFromCartHandler('${escapeHtml(
+                      item.id
+                    )}')"><i class="fas fa-trash"></i></button>
+                </div>
+            </div>
+        `;
+          cartItems.appendChild(cartItem);
         });
 
         updateCartTotal();
@@ -2052,8 +2086,7 @@
         ];
 
         if (categories.length === 0) {
-          categoriesContainer.innerHTML =
-            '<p style="color: var(--text-gray); text-align: center; width: 100%;"></p>';
+          categoriesContainer.innerHTML = "";
           return;
         }
 
@@ -2069,20 +2102,20 @@
 
         // Category Icons Map
         const categoryIcons = {
-          lips: "fas fa-star",
-          eyes: "fas fa-star",
-          face: "fas fa-star",
-          cheeks: "fas fa-star",
-          nails: "fas fa-star",
-          tools: "fas fa-star",
-          skincare: "fas fa-star",
-          brushes: "fas fa-star",
-          foundation: "fas fa-star",
-          lipstick: "fas fa-stars",
-          eyeshadow: "fas fa-star",
-          blush: "fas fa-star",
-          mascara: "fas fa-star",
-          concealer: "fas fa-star",
+          lips: "fa-star",
+          eyes: "fa-star",
+          face: "fa-star",
+          cheeks: "fa-star",
+          nails: "fa-star",
+          tools: "fa-star",
+          skincare: "fa-star",
+          brushes: "fa-star",
+          foundation: "fa-star",
+          lipstick: "fa-star",
+          eyeshadow: "fa-star",
+          blush: "fa-star",
+          mascara: "fa-star",
+          concealer: "fa-star",
         };
 
         // Create category buttons
@@ -2090,7 +2123,7 @@
           const btn = document.createElement("button");
           btn.className = "category-btn";
           const normalizedCat = normalizeCategory(cat);
-          const iconClass = categoryIcons[normalizedCat] || "fa-tag";
+          const iconClass = categoryIcons[normalizedCat] || "fa-star";
           btn.innerHTML = `<i class="fas ${iconClass}"></i> ${cat}`;
           btn.setAttribute("data-category", normalizedCat);
           categoriesContainer.appendChild(btn);
@@ -2198,15 +2231,6 @@
       function updateResultsCounter(count) {
         const counter = document.getElementById("results-counter");
         if (!counter) return;
-
-        // Hide the counter if there are no items
-        if (count === 0) {
-          counter.style.display = "none";
-          return;
-        }
-
-        // Show the counter and update content
-        counter.style.display = "block";
 
         if (
           count === cart.length &&
