--- a/admin/html/product-management.html
+++ b/admin/html/product-management.html
@@ -1435,6 +1435,140 @@
       .btn-outline-soft-pink {
         color: var(--secondary-pink);
       }
+      /* Product Stats Cards */
+      .stats-buttons {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+        gap: 20px;
+        margin-bottom: 25px;
+      }
+
+      .stat-btn {
+        border: none;
+        border-radius: 16px;
+        padding: 28px 24px;
+        color: white;
+        font-weight: 600;
+        font-size: 1rem;
+        cursor: pointer;
+        transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+        position: relative;
+        overflow: hidden;
+        background: var(--primary-pink);
+      }
+
+      .stat-btn::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        right: -50%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          90deg,
+          transparent,
+          rgba(255, 255, 255, 0.2),
+          transparent
+        );
+        transform: skewX(-20deg);
+        transition: right 0.6s ease;
+      }
+
+      .stat-btn:hover::before {
+        right: 150%;
+      }
+
+      .stat-btn:hover {
+        transform: translateY(-8px) scale(1.02);
+        box-shadow: 0 16px 32px rgba(0, 0, 0, 0.15);
+      }
+
+      .stat-btn i {
+        font-size: 2.5rem;
+        margin-bottom: 15px;
+        opacity: 0.95;
+        position: relative;
+        z-index: 1;
+        color: white;
+      }
+
+      .stat-value {
+        font-size: 2.2rem;
+        margin: 10px 0 5px 0;
+        display: block;
+        position: relative;
+        z-index: 1;
+        font-weight: 700;
+        letter-spacing: -0.5px;
+        color: white;
+      }
+
+      .stat-label {
+        position: relative;
+        z-index: 1;
+        font-size: 0.9rem;
+        opacity: 0.9;
+        font-weight: 500;
+        color: rgba(255, 255, 255, 0.9);
+      }
+
+      /* Product-specific gradient colors */
+      .total-products {
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      }
+
+      .available-products {
+        background: linear-gradient(135deg, #4facfe 0%, #00f2fe 100%);
+      }
+
+      .low-stock-products {
+        background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
+      }
+
+      .expired-products {
+        background: linear-gradient(135deg, #fd746c 0%, #ff9068 100%);
+      }
+
+      .no-stock-products {
+        background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+      }
+
+      /* Active state for filter buttons */
+      .stat-btn.active {
+        transform: translateY(-4px) scale(1.02);
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2);
+      }
+
+      /* Mobile responsive */
+      @media (max-width: 768px) {
+        .stats-buttons {
+          grid-template-columns: repeat(2, 1fr);
+          gap: 15px;
+        }
+
+        .stat-btn {
+          padding: 20px 16px;
+        }
+
+        .stat-value {
+          font-size: 1.8rem;
+        }
+
+        .stat-btn i {
+          font-size: 2rem;
+        }
+      }
+
+      @media (max-width: 480px) {
+        .stats-buttons {
+          grid-template-columns: 1fr;
+        }
+      }
     </style>
   </head>
 
@@ -1514,6 +1648,48 @@
 
         <!-- Main content -->
         <main class="col-md-10">
+          <div class="stats-buttons">
+            <button class="stat-btn total-products" data-filter="all">
+              <i class="fa-solid fa-boxes-stacked"></i>
+              <div class="stat-content">
+                <span class="stat-value">--</span>
+                <span class="stat-label">All Products</span>
+              </div>
+            </button>
+
+            <button class="stat-btn available-products" data-filter="Available">
+              <i class="fa-solid fa-check-circle"></i>
+              <div class="stat-content">
+                <span class="stat-value">--</span>
+                <span class="stat-label">Available Products</span>
+              </div>
+            </button>
+
+            <button class="stat-btn low-stock-products" data-filter="Low Stock">
+              <i class="fa-solid fa-exclamation-triangle"></i>
+              <div class="stat-content">
+                <span class="stat-value">--</span>
+                <span class="stat-label">Low Stock Products</span>
+              </div>
+            </button>
+
+            <button class="stat-btn expired-products" data-filter="Expired">
+              <i class="fa-solid fa-calendar-times"></i>
+              <div class="stat-content">
+                <span class="stat-value">--</span>
+                <span class="stat-label">Expired Products</span>
+              </div>
+            </button>
+
+            <button class="stat-btn no-stock-products" data-filter="No Stock">
+              <i class="fa-solid fa-ban"></i>
+              <div class="stat-content">
+                <span class="stat-value">--</span>
+                <span class="stat-label">No Stock Products</span>
+              </div>
+            </button>
+          </div>
+
           <div class="row">
             <!-- Product Form Section -->
             <div class="col-lg-5">
@@ -2400,6 +2576,51 @@
         // This immediately reloads the current page, simulating a browser refresh.
         window.location.reload();
       }
+
+      function loadProductStats() {
+        fetch("../php/product-management.php?action=get_stats")
+          .then((response) => response.json())
+          .then((data) => {
+            if (data.success) {
+              // Update stats cards
+              document.querySelector(
+                ".total-products .stat-value"
+              ).textContent = data.stats.total_products;
+              document.querySelector(
+                ".available-products .stat-value"
+              ).textContent = data.stats.available_products;
+              document.querySelector(
+                ".low-stock-products .stat-value"
+              ).textContent = data.stats.low_stock_products;
+              document.querySelector(
+                ".expired-products .stat-value"
+              ).textContent = data.stats.expired_products;
+              document.querySelector(
+                ".no-stock-products .stat-value"
+              ).textContent = data.stats.no_stock_products;
+            }
+          })
+          .catch((error) => {
+            console.error("Error loading product stats:", error);
+          });
+      }
+
+     
+
+      // Function to apply product filter
+      function applyProductFilter(filter) {
+        // Update your status filter dropdown
+        document.getElementById("statusFilter").value = filter;
+
+        // Trigger your existing filter function
+        filterProducts(); // This should be your existing filter function
+      }
+
+      // Call this when the page loads
+      document.addEventListener("DOMContentLoaded", function () {
+        loadProductStats();
+      });
+
       let currentSearch = "";
       let currentSort = "name-asc";
       let currentStatus = "";
@@ -2648,6 +2869,8 @@
         var tooltipList = tooltipTriggerList.map(function (tooltipTriggerEl) {
           return new bootstrap.Tooltip(tooltipTriggerEl);
         });
+
+
         const hamburgerBtn = document.getElementById("hamburgerBtn");
         const sidebar = document.getElementById("sidebar");
         const sidebarOverlay = document.getElementById("sidebarOverlay");
@@ -2685,6 +2908,25 @@
         const hexCodeColor = document.getElementById("hexCodeColor");
         const hexCodeText = document.getElementById("hexCodeText");
 
+        loadProductStats();
+
+         // Add click handlers for filter buttons
+      document.querySelectorAll(".stat-btn").forEach((button) => {
+        button.addEventListener("click", function () {
+          const filter = this.getAttribute("data-filter");
+
+          // Remove active class from all buttons
+          document.querySelectorAll(".stat-btn").forEach((btn) => {
+            btn.classList.remove("active");
+          });
+
+          // Add active class to clicked button
+          this.classList.add("active");
+
+          // Apply filter to product table
+          applyProductFilter(filter);
+        });
+      });
         function handleStatusChange(e) {
           currentStatus = e.target.value;
 
